syntax = "proto3";
import "google/api/annotations.proto";
service SearchService {
//    rpc Search (SearchRequest) returns (SearchResponse);
    rpc Search(SearchRequest) returns (SearchResponse) {
        option (google.api.http) = {
            post: "/v1/example/echo"
            body: "*"
        };
    }
}
message SearchRequest {
    string query = 1;
    int32 page_number = 2;
    int32 result_per_page = 3;
}
message SearchResponse {
    string query = 1;
    int32 page_number = 2;
    int32 result_per_page = 3;
}